--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
         uses: thatisuday/go-cross-build@v1
         with:
             platforms: 'linux/amd64, darwin/amd64, windows/amd64'
-            package: 'demo'
-            name: 'program'
+            package: 'portainer-stack-utils'
+            name: 'psu'
             compress: 'true'
             dest: 'dist'
